fix: object destroyed bug with pinging after exiting

--- a/src/index.html
+++ b/src/index.html
@@ -16,5 +16,5 @@
 		Click links to copy and/or open them in your default browser.</p>
     <div id="container"></div>
   </body>
-  <script src="./render.js"></script>
+  <script type="module" src="./render.js"></script>
 </html>
