feat(#8): about page and tutorial

--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,7 @@
       Made with Electron, Preact, and htm. Open source @ <a
       href="https://github.com/kl13nt/clippy" target="_blank">kl13nt/clippy</a>.
 		</p>
-		<p>Left Click to copy an entry, Right Click to remove it from the history.
-		Click links to copy and/or open them in your default browser.</p>
+		<p>A tutorial is available in the menu bar.</p>
     <div id="container"></div>
   </body>
   <script type="module" src="./render.js"></script>
