docs: added update docs

--- a/src/about.html
+++ b/src/about.html
@@ -24,22 +24,23 @@
 			Left Click an entry to copy it back.
 		</li>
 		<li>
-			Right Click an entry to remove it from the log.
+			Hover over an entry to view actions for that entry
 		</li>
 		<li>
-			Click `Clear clipboard only` to clear your system's clipboard only,
+			Click `Clear clipboard only` or `CTRL + Delete` to clear your system's clipboard only,
 			leaving the log as is.
 		</li>
 		<li>
-			Click `Clear log` to clear the log. You'll be prompted to clear your
+			Click `Clear log` or `CTRL + SHIFT + Delete` to clear the log. You'll be prompted to clear your
 			system's clipboard as well.
 		</li>
 		<li>
-			Click the `pin` icon next to each entry to pin/unpin it to/from the top of the log.
+			Hold `SHIFT` and Left Click multiple entries to select them then click
+			`Copy Selection` or `CTRL + C` to bulk copy your selections. Works with text only.
 		</li>
 		<li>
 			Hold `SHIFT` and Left Click multiple entries to select them then click
-			`Copy Selection` to bulk copy your selections. Works with text only.
+			`Delete Selection` or `Delete` to bulk copy your selections. Works with text only.
 		</li>
 	</ul>
 </body>
