style(src/): format all unformatted html files

--- a/src/about.html
+++ b/src/about.html
@@ -1,48 +1,46 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="UTF-8" />
+    <title>About</title>
+    <link href="./index.css" rel="stylesheet" />
+  </head>
 
-<head>
-	<meta charset="UTF-8" />
-	<title>About</title>
-	<link href="./index.css" rel="stylesheet" />
-</head>
-
-<body>
-	<h1>About</h1>
-	<p>
-		Clippy is a minimal clipboard history log. I don't store your data, promise!
-		Made with Electron, Preact, and htm. Open source @ <a
-		href="https://github.com/kl13nt/clippy" target="_blank">kl13nt/clippy</a>.
-	</p>
-	<h2>Tutorial</h2>
-	<ul>
-		<li>
-			Copy an image from your web browser, or any text content from anywhere,
-			and it'll show up in Clippy!
-		</li>
-		<li>
-			Left Click an entry to copy it back.
-		</li>
-		<li>
-			Hover over an entry to view actions for that entry
-		</li>
-		<li>
-			Click `Clear clipboard only` or `CTRL + Delete` to clear your system's clipboard only,
-			leaving the log as is.
-		</li>
-		<li>
-			Click `Clear log` or `CTRL + SHIFT + Delete` to clear the log. You'll be prompted to clear your
-			system's clipboard as well.
-		</li>
-		<li>
-			Hold `SHIFT` and Left Click multiple entries to select them then click
-			`Copy Selection` or `CTRL + C` to bulk copy your selections. Works with text only.
-		</li>
-		<li>
-			Hold `SHIFT` and Left Click multiple entries to select them then click
-			`Delete Selection` or `Delete` to bulk copy your selections. Works with text only.
-		</li>
-	</ul>
-</body>
-
+  <body>
+    <h1>About</h1>
+    <p>
+      Clippy is a minimal clipboard history log. I don't store your data,
+      promise! Made with Electron, Preact, and htm. Open source @
+      <a href="https://github.com/kl13nt/clippy" target="_blank"
+        >kl13nt/clippy</a
+      >.
+    </p>
+    <h2>Tutorial</h2>
+    <ul>
+      <li>
+        Copy an image from your web browser, or any text content from anywhere,
+        and it'll show up in Clippy!
+      </li>
+      <li>Left Click an entry to copy it back.</li>
+      <li>Hover over an entry to view actions for that entry</li>
+      <li>
+        Click `Clear clipboard only` or `CTRL + Delete` to clear your system's
+        clipboard only, leaving the log as is.
+      </li>
+      <li>
+        Click `Clear log` or `CTRL + SHIFT + Delete` to clear the log. You'll be
+        prompted to clear your system's clipboard as well.
+      </li>
+      <li>
+        Hold `SHIFT` and Left Click multiple entries to select them then click
+        `Copy Selection` or `CTRL + C` to bulk copy your selections. Works with
+        text only.
+      </li>
+      <li>
+        Hold `SHIFT` and Left Click multiple entries to select them then click
+        `Delete Selection` or `Delete` to bulk copy your selections. Works with
+        text only.
+      </li>
+    </ul>
+  </body>
 </html>
