--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,17 @@
   <body>
     <h1>Hello, Clippy!</h1>
     <p>
-      Clippy is a minimal clipboard history log. I don't store your data, promise!
-      Made with Electron, Preact, and htm. Open source @ <a
-      href="https://github.com/kl13nt/clippy" target="_blank" rel="noreferrer">kl13nt/clippy</a>.
-		</p>
-		<p>A tutorial is available in the menu bar.</p>
+      Clippy is a minimal clipboard history log. I don't store your data,
+      promise! Made with Electron, Preact, and htm. Open source @
+      <a
+        href="https://github.com/kl13nt/clippy"
+        target="_blank"
+        rel="noreferrer"
+        >kl13nt/clippy</a
+      >.
+    </p>
+    <p>A tutorial is available in the menu bar.</p>
     <div id="container"></div>
-		<script src="../dist/render.prod.js"></script>
+    <script src="../dist/render.prod.js"></script>
   </body>
 </html>
